Fix margin and padding on mobile

--- a/apps/cookbook/src/app/examples/carousel-example/carousel-example.component.scss
+++ b/apps/cookbook/src/app/examples/carousel-example/carousel-example.component.scss
@@ -8,3 +8,9 @@
 h2 {
   margin-top: 50px;
 }
+
+@include utils.media('<medium') {
+  fieldset {
+    display: none;
+  }
+}
